<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.CreateNewEvent"
    android:padding="20dp"
    android:background="@color/white">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/splash"
        android:transitionName="logo_image"/>

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/createNewEvent"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:transitionName="logo_text" />
    <TextView
        android:id="@+id/sloganText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fillTextFields"
        android:textSize="18sp"
        android:transitionName="logo_desc"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedDay"
        android:hint="@string/selectedDay"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/antic"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedTime"
        android:hint="@string/selectedTime"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/antic"
        android:background="@android:color/transparent"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventTitle"
        android:transitionName="anim_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDesc"
        android:transitionName="anim_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <RadioButton
          android:id="@+id/personRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/personEventRadio"
          android:textColor="@color/black"
          android:checked="true"/>
      <RadioButton
          android:id="@+id/familyRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/familyEventRadio"
          android:textColor="@color/black"/>
    </RadioGroup>

    <Button
        android:id="@+id/endCreateEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endRegistration"/>
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:background="@android:color/transparent" />


  </LinearLayout>

  </LinearLayout>

  </ScrollView>